target/fabric8/template-workdir/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${kubernetes.namespace}
  name: ${git.branch}-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: ${git.branch}-basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required - limbo"
    ingress.kubernetes.io/configuration-snippet: |-
      satisfy any;
      allow 10.0.0.0/8;
      deny all;
  labels:
    branch: ${git.branch}
spec:
  tls:
  - hosts:
    - ${git.branch}${environment.dev.baseurl}
    secretName: ${git.branch}-ingress-tls
  rules:
  - host: ${git.branch}${environment.dev.baseurl}
    http:
      paths:
      - backend:
          serviceName: ${git.branch}-tomcat-service
          servicePort: 9080
